# GeoShapely

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
geoshapely/: geoshape.py  ops.py
tests/: test_geoshape.py  test_geoshapely.py  test_ops.py
